--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .change-theme {
-  transition: all 0.3s;
+  transition: background-color 0.3s;
 }
 
 .change-theme.preload {
